--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "tecnoescala",
   "product_name": "Tecnoescala",
-  "version": "1.0.0",
-  "description": "A minimal Electron application",
+  "version": "1.0.13",
+  "description": "Aplicacion tecnoescala",
   "main": "main.js",
   "scripts": {
     "start": "electron .",
