--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "main": "main.js",
   "scripts": {
     "start": "electron .",
-    "build-installer": "electron-builder"
+    "build-installer": "electron-builder",
+    "build-installer-win": "electron-builder --win"
   },
   "build": {
     "appId": "tecnoescala",
