--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "main": "main.js",
   "scripts": {
     "start": "electron .",
-    "build-installer": "electron-builder",
-    "build-installer-win": "electron-builder --win"
+    "build": "electron-builder",
+    "build-win": "electron-builder --win"
   },
   "build": {
     "appId": "tecnoescala",
