--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "tecnoescala",
   "product_name": "Tecnoescala",
-  "version": "1.3.1",
+  "version": "1.5.5",
   "description": "Aplicacion tecnoescala",
   "main": "main.js",
   "scripts": {
     "start": "electron .",
     "build": "electron-builder",
+    "watch": "nodemon --exec electron .",
     "build-win": "electron-builder --win"
   },
   "build": {
@@ -36,9 +37,12 @@
   "license": "CC0-1.0",
   "devDependencies": {
     "electron": "^14.0.0",
-    "electron-builder": "^22.13.1"
+    "electron-builder": "^22.13.1",
+    "nodemon": "^3.1.4"
   },
   "dependencies": {
-    "electron-store": "^8.1.0"
-  }
+    "electron-store": "^8.1.0",
+    "node-fetch": "^2.7.0"
+  },
+  "'version'": "1.4.15"
 }
