--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
   },
   "dependencies": {
     "electron-store": "^8.1.0",
+    "form-data": "^4.0.1",
     "node-fetch": "^2.7.0"
   },
   "'version'": "1.4.15"
