--- a/package.json
+++ b/package.json
@@ -43,7 +43,8 @@
   "dependencies": {
     "electron-store": "^8.1.0",
     "form-data": "^4.0.1",
-    "node-fetch": "^2.7.0"
+    "node-fetch": "^2.7.0",
+    "node-qpdf2": "^6.0.0"
   },
   "'version'": "1.4.15"
 }
