--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "tecnoescala",
   "product_name": "Tecnoescala",
-  "version": "1.8.1",
+  "version": "1.8.11",
   "description": "Aplicacion tecnoescala",
   "main": "main.js",
   "scripts": {
@@ -41,10 +41,14 @@
     "nodemon": "^3.1.4"
   },
   "dependencies": {
+    "@signpdf/placeholder-plain": "^3.3.0",
     "electron-store": "^8.1.0",
     "form-data": "^4.0.1",
     "node-fetch": "^2.7.0",
-    "node-qpdf2": "^6.0.0"
+    "node-forge": "^1.3.3",
+    "node-qpdf2": "^6.0.0",
+    "node-signpdf": "^3.0.0",
+    "pdf-lib": "^1.17.1"
   },
   "'version'": "1.4.15"
 }
